--- a/server/plugins/Terraria/Data/NPC.yml
+++ b/server/plugins/Terraria/Data/NPC.yml
@@ -289,5 +289,11 @@ shops:
     - 回飞刃
     - 回飞棒
     - 五指剑
+    血肉之墙:
+    - 冰花
     世纪之花:
     - 猴子飞镖
+    灾厄之眼:
+    - 深渊裂斧
+    月球领主:
+    - 掠星镰
