--- a/server/plugins/Terraria/Data/entities.yml
+++ b/server/plugins/Terraria/Data/entities.yml
@@ -200,6 +200,7 @@
         - "猎魂鲨牙:6:8:1"
         - "大比目鱼炮:1:1:0.25"
         - "辞别飞镰:1:1:0.25"
+        - "渊海哑铃:1:1:0.25"
         - "幻妖龙吟:1:1:0.25"
 噬魂怪:
     soundDamaged: entity.hit.flesh
