--- a/plugin_development/TerrariaHelper/pom.xml
+++ b/plugin_development/TerrariaHelper/pom.xml
@@ -19,10 +19,10 @@
             <id>spigot-repo</id>
             <url>https://hub.spigotmc.org/nexus/content/repositories/snapshots/</url>
         </repository>
-        <repository>
-            <id>placeholderapi</id>
-            <url>https://repo.extendedclip.com/content/repositories/placeholderapi/</url>
-        </repository>
+<!--        <repository>-->
+<!--            <id>placeholderapi</id>-->
+<!--            <url>https://repo.extendedclip.com/content/repositories/placeholderapi/</url>-->
+<!--        </repository>-->
         <repository>
             <id>jitpack.io</id>
             <url>https://jitpack.io</url>
@@ -91,7 +91,8 @@
             <groupId>me.clip</groupId>
             <artifactId>placeholderapi</artifactId>
             <version>2.10.0</version>
-            <scope>provided</scope>
+            <scope>system</scope>
+            <systemPath>${project.basedir}/placeholderAPI/PlaceholderAPI-2.10.0.jar</systemPath>
         </dependency>
         <dependency>
             <groupId>com.github.MilkBowl</groupId>
