--- a/server/plugins/Terraria/Data/crates.yml
+++ b/server/plugins/Terraria/Data/crates.yml
@@ -7,12 +7,13 @@
     - 铜镐
     - 链锤
     - 铜质短弓
-    - 木箭:128
+    - 木箭:64
     - 火花魔棒
     - 魔力星
-    - 虚空袋
-    - 松鼠召唤杖
     - 树之祭祀:3
+    - 虚空袋
+    - 板砖:128
+    - 松鼠召唤杖
     - 敏捷药水:8
     - 鱼鳃药水:2
     - 回城药水:16
@@ -764,10 +765,11 @@
       giveAllItems: false
       amountToGive: 2
       items:
-      - 海星召唤杖
       - 水电剑
       - 巴淋内德
+      - 沙漠之灾
       - 水流喷射
+      - 海星召唤杖
   克苏鲁之眼:
     # 此处的1, 2...序号是将掉落物分为不同的部分（可以不是数字但不可以有重复），依照自上而下的顺序判定并给予玩家物品
     1:
@@ -787,7 +789,8 @@
       - 邪箭:20:49
       - 恶魔矿:30:87
       - 腐化种子:1:3
-      - 泪刃:1:1:0.1
+      - 泪刃:1:1:0.3333
+      - 弹跳眼球:1:1:0.3333
       - 死亡凝视法杖:1:1:0.3333
       - 金币:3
       - 弱效治疗药水:5:15
@@ -945,6 +948,7 @@
       - 潜渊震荡者
       - 巴淋诺提卡
       - 天鳍毁灭者
+      - 渊海之灾
       - 水灌
       - 深海权杖
     2:
@@ -1000,9 +1004,10 @@
       giveAllItems: false
       amountToGive: 2
       items:
-      - 憎恨
-      - 混乱火鞭
       - 遗殇
+      - 憎恨
+      - 硫火飞爪
+      - 混乱火鞭
       - 混乱之祈祷
     2:
       items:
@@ -1061,6 +1066,7 @@
       - 星云鞭
       - 极光烈焰
       - 恒星匕首
+      - 源野天光
       - 南极光羽
     2:
       items:
@@ -1099,6 +1105,7 @@
       - 蜂巢发射器
       - 枯萎散播者
       - 孔雀翎
+      - 瘟疫注射器
       - 瘟疫法杖
       - 燃料电池组
       - 瘟疫控制器
@@ -1129,9 +1136,10 @@
       giveAllItems: false
       amountToGive: 2
       items:
-      - 泡泡枪
-      - 海啸弓
       - 猪鲨链球
+      - 海啸弓
+      - 公爵斩首者
+      - 泡泡枪
       - 利刃台风
     2:
       items:
@@ -1173,8 +1181,9 @@
       amountToGive: 2
       items:
       - 微波辐照
-      - 星神圣护
+      - 星体暴乱
       - 天穹流星
+      - 星神圣护
     2:
       items:
       - 星尘:60:90
@@ -1312,6 +1321,7 @@
       - 腐臭倾泻者
       - 剧毒叉枪
       - 剧毒旋风
+      - 死神遗镰
       - 酸蚀毒蝰
       - 干缩腐尸
     2:
@@ -1342,12 +1352,14 @@
       giveAllItems: false
       amountToGive: 3
       items:
-      - 巨龙七星灯
-      - 巨龙之息
-      - 星火凤凰雨
-      - 巨龙之怒
-      - 小鸡大炮
       - 焚灭天惩
+      - 巨龙之怒
+      - 巨龙之息
+      - 小鸡大炮
+      - 狂龙翼火
+      - 终曲黎明
+      - 星火凤凰雨
+      - 巨龙七星灯
     2:
       items:
       - Drew之翼
@@ -1363,6 +1375,8 @@
       items:
       - 塔纳托斯的脊柱
       - 煌晖御流炮
+      - 微元劫裂者
+      - 衍曜旋刃
       - 阿瑞斯外骨骼
     2:
       items:
