rogue accessories update
added several rogue accessories' item and recipe

--- a/server/plugins/Terraria/Data/crates.yml
+++ b/server/plugins/Terraria/Data/crates.yml
@@ -758,6 +758,7 @@
       - 珊瑚:30:40
       - 海星:30:40
       - 贝壳:30:40
+      - 沙尘披风:1:1:0.3333
       - 天蓝石:1:1:0.3333
       - 金币:2
       - 弱效治疗药水:5:15
