--- a/server/plugins/Terraria/Data/entities.yml
+++ b/server/plugins/Terraria/Data/entities.yml
@@ -117,6 +117,7 @@
         - "深渊水压|50|1"
     drop:
         - "铜币:350:800:1"
+        - "墨水炸弹:1:1:0.1"
 剧毒米诺鱼:
     buffImmute:
         - "深渊水压"
@@ -184,6 +185,7 @@
         - "深渊水压|100|1"
     drop:
         - "铜币:200000:300000:1"
+        - "墨水炸弹:1:1:0.2"
         - "深渊细胞:12:25:1"
         - "灵魂之锋:1:1:0.25"
         - "乌贼之哀歌:1:1:0.25"
