--- a/server/plugins/Terraria/Data/NPC.yml
+++ b/server/plugins/Terraria/Data/NPC.yml
@@ -293,7 +293,11 @@ shops:
     - 冰花
     世纪之花:
     - 猴子飞镖
+    - 精准手套
+    - 鲁莽手套
     灾厄之眼:
     - 深渊裂斧
+    石巨人:
+    - 虚空掠夺者
     月球领主:
     - 掠星镰
