--- a/server/plugins/Terraria/Data/crates.yml
+++ b/server/plugins/Terraria/Data/crates.yml
@@ -838,6 +838,7 @@
       - 腐烂物质:30:40
       - 金币:10
       - 治疗药水:5:15
+      - 污秽手套:1:1:0.33
     3:
       progressRequired: 血肉之墙
       items:
@@ -874,6 +875,7 @@
       items:
       - 战士徽章
       - 游侠徽章
+      - 盗贼徽章
       - 巫师徽章
       - 召唤师徽章
     2:
@@ -956,6 +958,7 @@
       items:
       - 海波纹章
       - 海之烧灼:1:1:0.1
+      - 腐蚀脊椎:1:1:0.3333
       - 核燃料棒:1:1:0.3333
       - 金币:30
       - 强效治疗药水:5:15
